# neurosfl

./: .buildinfo  README.md  modules.html  neurosfl.frontend.html  neurosfl.html  pyproject.toml  search.html
_sources/: modules.rst.txt  neurosfl.backend.rst.txt  neurosfl.rst.txt
docs/: conf.py  index.rst
docs/gh-output-html/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/gh-output-html/_modules/: index.html
docs/gh-output-html/_modules/neurosfl/frontend/: parser.html
docs/gh-output-html/html/: neurosfl.backend.html
docs/gh-output-html/html/_modules/neurosfl/: consts.html  main.html
docs/gh-output-html/html/_modules/neurosfl/backend/: backend.html  elasticbool.html
docs/gh-output-html/html/_modules/neurosfl/frontend/: structs.html
docs/gh-output-html/html/_sources/: neurosfl.frontend.rst.txt
src/neurosfl/: consts.py  main.py
src/neurosfl/backend/: backend.py  elasticbool.py
src/neurosfl/frontend/: parser.out  parser.py  parsetab.py  structs.py
tests/: test_consts.py  test_logical_ops.py  test_parenthesis.py  test_simple_comparisons.py
